# code-logs

./: .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  ate_results.csv  build.sh  dataset_aliases.yaml  evaluate.py  evaluate_loops.py  evaluate_loops_recall.py  evaluate_mesa_baselines.py  evaluate_swarm_slam.py  extract_gt_loops.py  g2o_to_jrl.py  merge_optimize_g2o.py  pixi.toml  plot_ablation.py  plot_algebraic_connectivity.py  plot_all_baselines_traj.py  plot_bandwidth_bar.py  plot_baseline.py  plot_cbs_convergence.py  plot_cbs_divergence_map.py  plot_combined_baselines_traj.py  plot_combined_traj.py  plot_g2o.py  plot_kimera_traj.py  plot_loop_errors_map.py  plot_loop_rotation_dist.py  plot_multi_dataset_traj.py  plot_rrd.py  plot_satellite_traj.py  plot_scalability.py  run_all_evaluations.py  run_cartan_sync.py  run_gnc_gm.py  run_mesa_baselines.py  summarize_results.py  (+3 more)
src/: cartan_sync_main.cpp  optimize_offline.cpp
utils/: __init__.py  io.py  plot.py
